Update to 1.20.6, Move Datagen to NeoForge