@@ -76,7 +76,7 @@ public class TreeFromStructureNBTFeature extends Feature<TreeFromStructureNBTCon
             throw new IllegalArgumentException("There cannot be more than one trunk central position for structure NBT palette %s. Trunk central position is specified with white wool.".formatted(config.baseLocation()));
         }
 
-        BlockPos centerOffset = center.get(0).pos();
+        BlockPos centerOffset = center.getFirst().pos();
         centerOffset = new BlockPos(-centerOffset.getX(), 0, -centerOffset.getZ());
 
 
@@ -107,7 +107,7 @@ public class TreeFromStructureNBTFeature extends Feature<TreeFromStructureNBTCon
             if (canopyAnchor.size() > 1) {
                 throw new IllegalArgumentException("There cannot be more than one central canopy position. Canopy central position is specified with yellow wool on the trunk palette.");
             }
-            placeCanopy(config, logProvider, leavesProvider, level, getModifiedPos(placeSettings, canopyAnchor.get(0), centerOffset, origin), random, placeSettings, randomCanopyPalette, leavePositions, trunkPositions, trunkLength, config.growableOn());
+            placeCanopy(config, logProvider, leavesProvider, level, getModifiedPos(placeSettings, canopyAnchor.getFirst(), centerOffset, origin), random, placeSettings, randomCanopyPalette, leavePositions, trunkPositions, trunkLength, config.growableOn());
         } else {
             placeCanopy(config, logProvider, leavesProvider, level, origin, random, placeSettings, randomCanopyPalette, leavePositions, trunkPositions, trunkLength, config.growableOn());
         }
@@ -144,7 +144,7 @@ public class TreeFromStructureNBTFeature extends Feature<TreeFromStructureNBTCon
             throw new IllegalArgumentException("There cannot be more than one canopy anchor for structure NBT palette %s. Canopy anchor is specified with white wool.".formatted(config.canopyLocation()));
         }
 
-        StructureTemplate.StructureBlockInfo structureBlockInfo = canopyAnchor.get(0);
+        StructureTemplate.StructureBlockInfo structureBlockInfo = canopyAnchor.getFirst();
         BlockPos canopyCenterOffset = structureBlockInfo.pos();
         canopyCenterOffset = new BlockPos(-canopyCenterOffset.getX(), trunkLength, -canopyCenterOffset.getZ());
 
